--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.waves.min.js"></script>
 
-    <title>front</title>
+    <title>FinPlay</title>
   </head>
   <body>
     <div id="root"></div>
